# iroha_wasm_prototype

./: Cargo.toml  README.md
data_model/: Cargo.toml
data_model/src/: lib.rs
example_smartcontract/: Cargo.toml
example_smartcontract/src/: lib.rs
iroha/: Cargo.toml  example_smartcontract.wasm
iroha/src/: client.rs  lib.rs  main.rs
runtime/: Cargo.toml  example_smartcontract.wasm
runtime/src/: main.rs  wsv.rs
