[package]
name = "example_smartcontract"
version = "0.1.0"
authors = ["Egor Ivkov <e.o.ivkov@gmail.com>"]
edition = "2018"

[lib]
crate-type = ['cdylib']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data_model = { path = "../data_model", version = "0.1.0"}
wee_alloc = "0.4.5"
parity-scale-codec = {version = "2.2.0", features = ["full", "derive"], default-features = false}